[gd_scene load_steps=11 format=3 uid="uid://clbdnicfshbr1"]

[ext_resource type="Script" path="res://Ball.gd" id="2_88fgo"]
[ext_resource type="Script" path="res://ThePlayer.gd" id="2_xav86"]
[ext_resource type="Script" path="res://TheOpponent.gd" id="3_67kxn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtb5d"]
size = Vector2(25, 740.5)

[sub_resource type="SystemFont" id="SystemFont_6a6uk"]

[sub_resource type="LabelSettings" id="LabelSettings_awyxd"]
font = SubResource("SystemFont_6a6uk")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_e6htr"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwmy6"]
size = Vector2(30, 30)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vopga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtwtd"]
size = Vector2(0.998686, 1.00458)

[node name="Main" type="Node2D"]

[node name="LeftGoal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2(-13.5, 362.75)
shape = SubResource("RectangleShape2D_dtb5d")

[node name="RightGoal" type="Area2D" parent="."]
position = Vector2(1189, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
position = Vector2(110, 344)
shape = SubResource("RectangleShape2D_dtb5d")

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 420.0
offset_top = 7.0
offset_right = 490.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_awyxd")

[node name="Label2" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 742.0
offset_top = 1.0
offset_right = 812.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_awyxd")

[node name="Ball" type="Area2D" parent="."]
process_mode = 4
position = Vector2(400, 300)
script = ExtResource("2_88fgo")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
texture = SubResource("PlaceholderTexture2D_e6htr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_iwmy6")

[node name="ThePlayer" type="Area2D" parent="."]
position = Vector2(70.6757, 360.181)
scale = Vector2(23.5763, 110.63)
script = ExtResource("2_xav86")
speed = 500

[node name="Sprite2D" type="Sprite2D" parent="ThePlayer"]
scale = Vector2(1, 1)
texture = SubResource("PlaceholderTexture2D_vopga")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThePlayer"]
shape = SubResource("RectangleShape2D_dtwtd")

[node name="TheOpponent" type="Area2D" parent="."]
position = Vector2(1193.1, 498.181)
scale = Vector2(23.5763, 110.63)
script = ExtResource("3_67kxn")

[node name="Sprite2D" type="Sprite2D" parent="TheOpponent"]
scale = Vector2(1, 1)
texture = SubResource("PlaceholderTexture2D_vopga")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TheOpponent"]
shape = SubResource("RectangleShape2D_dtwtd")

[connection signal="area_entered" from="ThePlayer" to="Ball" method="_on_the_player_area_entered"]
[connection signal="balls" from="ThePlayer" to="Ball" method="_on_the_player_balls"]
[connection signal="area_entered" from="TheOpponent" to="Ball" method="_on_the_opponent_area_entered"]
